Vurderer nyoppstartet-vilkår også ved refusjon på OMP